@@ -4,8 +4,9 @@
 //
 // Some strings that need an update before a commit or a release
 // Update Changelog.txt with the git changelog
+// Update TODO.txt if necessary
 //
-#define APPLICATION_VERSION_STR "1.5.0"
+#define APPLICATION_VERSION_STR "1.5.1"
 #define POSITION_STR            "Service Engineer (S2), Market France/BeNeLux"
 #define COPYRIGHT_STR           "(c)2020-2024 Martial Demolins"
 
