@@ -41,9 +41,30 @@ void DownloadMenu::deleteActions()
     }
 }
 
-void DownloadMenu::setItems(QString DocsString, QWidget* WidgetToFocus)
+void DownloadMenu::setItems(QString DocsString, QString TBnumber, QWidget* WidgetToFocus)
 {
     deleteActions();
+
+    // Always add the TB (pfd)
+    QAction* PdfAction = addAction("Technical Bulletin");
+    this->ActionList.append(PdfAction);
+    connect(PdfAction, &QAction::triggered, this, [TBnumber, WidgetToFocus]() {
+        QDesktopServices::openUrl(QString(Settings::instance()->baseURLTechnicalBulletinPDF()).arg(TBnumber));
+        if (WidgetToFocus != nullptr) {
+            WidgetToFocus->setFocus();
+        }
+    });
+
+    // Always add the TB CTI (pfd)
+    QAction* CTIAction = addAction("Customer Technical Information");
+    this->ActionList.append(CTIAction);
+    TBnumber += CTI_SUFFIX;
+    connect(CTIAction, &QAction::triggered, this, [TBnumber, WidgetToFocus]() {
+        QDesktopServices::openUrl(QString(Settings::instance()->baseURLTechnicalBulletinPDF()).arg(TBnumber));
+        if (WidgetToFocus != nullptr) {
+            WidgetToFocus->setFocus();
+        }
+    });
 
     // Split the documents names
     QStringList DocList = DocsString.split(QChar(','), Qt::SkipEmptyParts, Qt::CaseInsensitive);
@@ -52,11 +73,11 @@ void DownloadMenu::setItems(QString DocsString, QWidget* WidgetToFocus)
         // Add all the docs, creating their own lambda function to start the download when the menu item is triggered
         for (int i = 0; i < DocList.count(); i++) {
             QAction* DocAction = addAction(DocList.at(i).trimmed());
-            this->ActionList << DocAction;
+            this->ActionList.append(DocAction);
             connect(DocAction, &QAction::triggered, this, [DocAction, WidgetToFocus]() {
                 QString FullName = DocAction->text();
                 QString Name     = FullName.section(QChar('-'), 1);
-                QDesktopServices::openUrl(QString(Settings::instance()->baseURLTechnicalPublication()).arg(Name));
+                QDesktopServices::openUrl(QString(Settings::instance()->baseURLTechnicalPublications()).arg(Name));
 
                 if (WidgetToFocus != nullptr) {
                     WidgetToFocus->setFocus();
